break out content

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ build-and-deploy:
 
   - name: Build 🔨
     run: |
-    haxe build.hxml
+    haxe -lib zero-static -lib markdown
 
   - name: Push changes 🏃‍♀️
     uses: ad-m/github-push-action@master
